Prepare for things to do for tomorrow's group

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,57 +24,9 @@ add_library(boost_out_ptr INTERFACE)
 add_library(Boost::out_ptr ALIAS boost_out_ptr)
 
 target_include_directories(boost_out_ptr INTERFACE 
-	$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/boost>  
-	$<INSTALL_INTERFACE:include/boost>
+	$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>  
+	$<INSTALL_INTERFACE:include>
 )
-
-if (BOOST_OUT_PTR_TESTS OR BOOST_OUT_PTR_BENCHMARKS)
-	enable_testing()
-	add_subdirectory(vendor/config)
-	add_subdirectory(vendor/core)
-	#add_subdirectory(vendor/detail)
-	add_subdirectory(vendor/boost/assert)
-	add_subdirectory(vendor/static_assert)
-	# test and benchmark deps
-	add_subdirectory(vendor/ficapi)
-	target_link_libraries(boost_out_ptr INTERFACE
-		Boost::assert
-		Boost::config
-		Boost::core
-		Boost::static_assert
-	)
-endif()
-
-set(boost_out_ptr_sources 
-	"include/boost/out_ptr.hpp"
-	"include/boost/out_ptr/out_ptr.hpp"
-	"include/boost/out_ptr/inout_ptr.hpp"
-	"include/boost/out_ptr/simple_out_ptr.hpp"
-	"include/boost/out_ptr/simple_inout_ptr.hpp"
-	"include/boost/out_ptr/clever_out_ptr.hpp"
-	"include/boost/out_ptr/clever_inout_ptr.hpp"
-)
-
-target_sources(boost_out_ptr INTERFACE 
-	$<BUILD_INTERFACE:${boost_out_ptr_sources}>  
-	$<INSTALL_INTERFACE:${boost_out_ptr_sources}>
-)
-set_target_properties(boost_out_ptr
-	PROPERTIES
-	EXPORT_NAME Boost::out_ptr
-)
-
-# # Benchmarks, Tests, Examples
-if (BOOST_OUT_PTR_TESTS)
-	enable_testing()
-	add_subdirectory(tests)
-endif(BOOST_OUT_PTR_TESTS)
-if (BOOST_OUT_PTR_BENCHMARKS)
-	add_subdirectory(benchmarks)
-endif(BOOST_OUT_PTR_BENCHMARKS)
-if (BOOST_OUT_PTR_EXAMPLES)
-	add_subdirectory(examples)
-endif(BOOST_OUT_PTR_EXAMPLES)
 
 # # Config / Version packaging
 # Version configurations
@@ -90,17 +42,60 @@ write_basic_package_version_file(
 
 export(TARGETS boost_out_ptr FILE "${CMAKE_CURRENT_BINARY_DIR}/cmake/boost/out_ptr-targets.cmake")
 
-install(TARGETS boost_out_ptr
-	EXPORT boost_out_ptr)
+set(boost_out_ptr_sources 
+	"include/boost/out_ptr.hpp"
+	"include/boost/out_ptr/out_ptr.hpp"
+	"include/boost/out_ptr/inout_ptr.hpp"
+	"include/boost/out_ptr/simple_out_ptr.hpp"
+	"include/boost/out_ptr/simple_inout_ptr.hpp"
+	"include/boost/out_ptr/clever_out_ptr.hpp"
+	"include/boost/out_ptr/clever_inout_ptr.hpp"
+)
 
-install(EXPORT boost_out_ptr
-	FILE boost_out_ptr-targets.cmake
-	DESTINATION "${CMAKE_INSTALL_LIBDIR}/cmake/boost/out_ptr")
+#target_sources(boost_out_ptr INTERFACE 
+#	$<BUILD_INTERFACE:${boost_out_ptr_sources}>  
+#	$<INSTALL_INTERFACE:${boost_out_ptr_sources}>
+#)
+set_target_properties(boost_out_ptr
+	PROPERTIES
+	EXPORT_NAME Boost::out_ptr
+)
 
-install(DIRECTORY "include/boost/out_ptr"
-	DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}")
+#install(TARGETS boost_out_ptr
+#	EXPORT boost_out_ptr)
 
-install(FILES
-	"${CMAKE_CURRENT_BINARY_DIR}/cmake/boost/out_ptr-config.cmake"
-	"${CMAKE_CURRENT_BINARY_DIR}/cmake/boost/out_ptr-config-version.cmake"
-DESTINATION "${CMAKE_INSTALL_LIBDIR}/cmake/boost")
+#install(EXPORT boost_out_ptr
+#	FILE boost_out_ptr-targets.cmake
+#	DESTINATION "${CMAKE_INSTALL_LIBDIR}/cmake/boost/out_ptr")
+
+#install(DIRECTORY "include/boost/out_ptr"
+#	DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}")
+
+#install(FILES
+#	"${CMAKE_CURRENT_BINARY_DIR}/cmake/boost/out_ptr-config.cmake"
+#	"${CMAKE_CURRENT_BINARY_DIR}/cmake/boost/out_ptr-config-version.cmake"
+#	DESTINATION "${CMAKE_INSTALL_LIBDIR}/cmake/boost")
+
+
+# # Benchmarks, Tests, Examples
+if (BOOST_OUT_PTR_TESTS OR BOOST_OUT_PTR_BENCHMARKS)
+	enable_testing()
+	add_subdirectory(vendor/boost/config)
+	add_subdirectory(vendor/boost/core)
+	add_subdirectory(vendor/boost/assert)
+	add_subdirectory(vendor/boost/static_assert)
+	add_subdirectory(vendor/boost/mp11)
+	# test and benchmark deps
+	add_subdirectory(vendor/ficapi)
+endif()
+
+if (BOOST_OUT_PTR_TESTS)
+	enable_testing()
+	add_subdirectory(tests)
+endif(BOOST_OUT_PTR_TESTS)
+if (BOOST_OUT_PTR_BENCHMARKS)
+	add_subdirectory(benchmarks)
+endif(BOOST_OUT_PTR_BENCHMARKS)
+if (BOOST_OUT_PTR_EXAMPLES)
+	add_subdirectory(examples)
+endif(BOOST_OUT_PTR_EXAMPLES)
