--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,9 @@
 [submodule "vendor/boost/smart_ptr"]
 	path = vendor/boost/smart_ptr
 	url = https://github.com/boostorg/smart_ptr
+[submodule "vendor/ficapi"]
+	path = vendor/ficapi
+	url = https://github.com/ThePhD/ficapi.git
+[submodule "vendor/boost/mp11"]
+	path = vendor/boost/mp11
+	url = https://github.com/boostorg/mp11
