--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,9 +1,10 @@
-# Copyright Ⓒ 2018-2019 ThePhD
-# Distributed under the Boost Software License, Version 1.0.
-# See accompanying file LICENSE_1_0.txt or copy at http://www.boost.org/LICENSE_1_0.txt
-
-# Partial (add_subdirectory only) and experimental CMake support
-# Subject to change; please do not rely on the contents of this file yet
+#  Copyright ⓒ 2018-2019 ThePhD.
+#
+#  Distributed under the Boost Software License, Version 1.0. (See
+#  accompanying file LICENSE_1_0.txt or copy at
+#  http://www.boost.org/LICENSE_1_0.txt)
+#
+#  See http://www.boost.org/libs/out_ptr/ for documentation.
 
 set(boost_out_ptr_example_sources
 	"boost.shared_ptr.cpp"
@@ -17,7 +18,7 @@ set(boost_out_ptr_example_sources
 foreach (example_source_name ${boost_out_ptr_example_sources})
 	set(example_source_file source/${example_source_name})
 	set(example_target boost.out_ptr.${example_source_name})
-	add_executable(${example_target} ${CMAKE_CURRENT_SOURCE_DIR}/${example_source_file})
+	add_executable(${example_target} ${example_source_file})
 	if (MSVC)
 	else()
 		target_compile_options(${example_target}
@@ -31,7 +32,6 @@ foreach (example_source_name ${boost_out_ptr_example_sources})
 		Boost::config
 		Boost::core
 		Boost::mp11
-		Boost::static_assert
 		Boost::out_ptr 
 		
 		ficapi
