--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,9 +1,10 @@
-# Copyright Ⓒ 2018-2019 ThePhD
-# Distributed under the Boost Software License, Version 1.0.
-# See accompanying file LICENSE_1_0.txt or copy at http://www.boost.org/LICENSE_1_0.txt
-
-# Partial (add_subdirectory only) and experimental CMake support
-# Subject to change; please do not rely on the contents of this file yet
+#  Copyright ⓒ 2018-2019 ThePhD.
+#
+#  Distributed under the Boost Software License, Version 1.0. (See
+#  accompanying file LICENSE_1_0.txt or copy at
+#  http://www.boost.org/LICENSE_1_0.txt)
+#
+#  See http://www.boost.org/libs/out_ptr/ for documentation.
 
 # Test dependency: catch2
 add_subdirectory(../vendor/catch2 "vendor/catch2")
@@ -45,7 +46,6 @@ target_link_libraries(boost_out_ptr_tests
 	Boost::config
 	Boost::core
 	Boost::mp11
-	Boost::static_assert
 	Boost::out_ptr 
 	
 	Catch2::Catch2 
