Adding examples and buffing out C++11 quirks. Fix #5 Fix #4 Fix #3 Fix #6

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -6,9 +6,21 @@
 #
 #  See http://www.boost.org/libs/out_ptr/ for documentation.
 
+# # Dependencies
+# Need boost.smart_ptr
+# which comes with all these dependencies...
+add_subdirectory(../vendor/boost/move "vendor/boost/move")
+add_subdirectory(../vendor/boost/predef "vendor/boost/predef")
+add_subdirectory(../vendor/boost/static_assert "vendor/boost/static_assert")
+add_subdirectory(../vendor/boost/throw_exception "vendor/boost/throw_exception")
+add_subdirectory(../vendor/boost/type_traits "vendor/boost/type_traits")
+add_subdirectory(../vendor/boost/smart_ptr "vendor/boost/smart_ptr")
+
+# Need pthreads
+find_package(Threads REQUIRED)
+
+# # Examples
 set(boost_out_ptr_example_sources
-	"boost.shared_ptr.cpp"
-	"com.intrusive_ptr.cpp"
 	"custom.handle.cpp"
 	"std.custom_unique_ptr.cpp"
 	"std.shared_ptr.cpp"
@@ -28,11 +40,13 @@ foreach (example_source_name ${boost_out_ptr_example_sources})
 	target_link_libraries(${example_target}
 		PRIVATE 
 		
+		Threads::Threads
+
 		Boost::assert
 		Boost::config
 		Boost::core
 		Boost::mp11
-		Boost::out_ptr 
+		Boost::out_ptr
 		
 		ficapi
 		
@@ -45,3 +59,63 @@ foreach (example_source_name ${boost_out_ptr_example_sources})
 		add_test(NAME ${example_target} COMMAND ${example_target})
 	endif()
 endforeach()
+
+if (MSVC)
+	set(example_source_name "com.intrusive_ptr.cpp")
+	set(example_source_file source/${example_source_name})
+	set(example_target boost.out_ptr.${example_source_name})
+	add_executable(${example_target} ${example_source_file})
+	if (MSVC)
+	else()
+		target_compile_options(${example_target}
+			PRIVATE -std=c++11)
+	endif()
+	target_compile_definitions(${example_target} PRIVATE __STDC_WANT_LIB_EXT1__=1)
+	target_link_libraries(${example_target}
+		PRIVATE 
+		
+		Threads::Threads
+
+		Boost::assert
+		Boost::config
+		Boost::core
+		Boost::mp11
+		Boost::out_ptr 
+		Boost::smart_ptr
+		
+		${CMAKE_DL_LIBS}
+	)
+	if (BOOST_OUT_PTR_TESTS)
+		add_test(NAME ${example_target} COMMAND ${example_target})
+	endif()
+endif()
+
+if (THREADS_HAVE_PTHREAD_ARG)
+	set(example_source_name "pthread.cpp")
+	set(example_source_file source/${example_source_name})
+	set(example_target boost.out_ptr.${example_source_name})
+	add_executable(${example_target} ${example_source_file})
+	if (MSVC)
+	else()
+		target_compile_options(${example_target}
+			PRIVATE -std=c++11)
+	endif()
+	target_compile_definitions(${example_target} PRIVATE __STDC_WANT_LIB_EXT1__=1)
+	target_link_libraries(${example_target}
+		PRIVATE 
+		
+		Threads::Threads
+
+		Boost::assert
+		Boost::config
+		Boost::core
+		Boost::mp11
+		Boost::out_ptr 
+		Boost::smart_ptr
+		
+		${CMAKE_DL_LIBS}
+	)
+	if (BOOST_OUT_PTR_TESTS)
+		add_test(NAME ${example_target} COMMAND ${example_target})
+	endif()
+endif()
