--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -20,6 +20,10 @@ platform:
 - x64
 - x86
 
+install:
+  - cd %APPVEYOR_BUILD_FOLDER%
+  - git submodule update --init --recursive
+
 before_build:
 - md build-debug
 - cd build-debug
