Keep trying stuff until it works, basically...! Something's bound to break Clang's back here.

--- a/benchmarks/CMakeLists.txt
+++ b/benchmarks/CMakeLists.txt
@@ -40,7 +40,7 @@ add_executable(boost.out_ptr.benchmarks ${boost_out_ptr_benchmarks_sources})
 target_include_directories(boost.out_ptr.benchmarks PRIVATE
 	"include")
 if (MSVC)
-	target_compile_options(${example_target}
+	target_compile_options(boost.out_ptr.benchmarks
 		PRIVATE /W4)
 else()
 	target_compile_options(boost.out_ptr.benchmarks
