--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -20,6 +20,10 @@ platform:
 - x64
 - x86
 
+matrix:
+  allow_failures:
+    - image: Visual Studio 2015
+
 install:
   - cd %APPVEYOR_BUILD_FOLDER%
   - git submodule update --init --recursive
