--- a/tests/failure/CMakeLists.txt
+++ b/tests/failure/CMakeLists.txt
@@ -7,7 +7,7 @@
 #  See http://www.boost.org/libs/out_ptr/ for documentation.
 
 set(boost_out_ptr_failure_tests_sources
-	"inout_ptr.roundtrip.shared_ptr.void.cpp"
+	"inout_ptr.roundtrip.void.cpp"
 	"inout_ptr.shared_ptr.cpp"
 	"inout_ptr.shared_ptr.deleter.cpp"
 	"out_ptr.roundtrip.shared.void.cpp"
