fix up the documentation and other things as per Sankel's review comments fix the derp pointed out in #20

--- a/.gitmodules
+++ b/.gitmodules
@@ -46,3 +46,6 @@
 [submodule "vendor/boost/throw_exception"]
 	path = vendor/boost/throw_exception
 	url = https://github.com/boostorg/throw_exception.git
+[submodule "vendor/boost/test"]
+	path = vendor/boost/test
+	url = https://github.com/boostorg/test.git
