Sanity checks on for tests

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -36,6 +36,8 @@ set_target_properties(${example_target} PROPERTIES
 	CXX_STANDARD_REQUIRED TRUE
 	CXX_EXTENSIONS FALSE
 )
+target_compile_definitions(boost.out_ptr.tests
+	PRIVATE BOOST_OUT_PTR_CLEVER_SANITY_CHECK=1)
 if (MSVC)
 	target_compile_options(boost.out_ptr.tests
 		PRIVATE /W4)
